force-app/main/default/objects/RTL_Campaign_To_HQ_Callout_Log__c/RTL_Campaign_To_HQ_Callout_Log__c.object-meta.xml
<CustomObject>
    <label>Campaign To HQ Callout Log</label>
    <nameField>
        <displayFormat>CCL-{0000}</displayFormat>
        <label>RTL Campaing To HQ Callout Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign To HQ Callout Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>