force-app/main/default/objects/RTL_Campaign_To_HQ_Callout_Log__c/fields/RTL_Campaign__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign__c</fullName>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign To HQ Callout Logs</relationshipLabel>
    <relationshipName>Campaign_To_HQ_Callout_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>