force-app/main/default/objects/RTL_Campaign_To_HQ_Callout_Log__c/fields/RTL_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Campaign ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>