force-app/main/default/objects/RTL_Campaign_To_HQ_Callout_Log__c/fields/RTL_Create_date__c.field-meta.xml
<CustomField>
    <fullName>RTL_Create_date__c</fullName>
    <defaultValue>Now()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Created date</label>
    <type>DateTime</type>
</CustomField>