force-app/main/default/objects/RTL_Campaign_To_HQ_Callout_Log__c/fields/RTL_Host_Status__c.field-meta.xml
<CustomField>
    <fullName>RTL_Host_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Host Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>