force-app/main/default/objects/RTL_Campaign_To_HQ_Callout_Log__c/fields/RTL_Last_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>RTL_Last_Call_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Call Date</label>
    <type>DateTime</type>
</CustomField>