force-app/main/default/objects/RTL_Campaign_To_HQ_Callout_Log__c/recordTypes/default.recordType-meta.xml
<RecordType>
    <fullName>default</fullName>
    <active>true</active>
    <label>default</label>
</RecordType>