force-app/main/default/objects/RTL_Campaign_To_HQ_Callout_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RTL_Status_text__c</columns>
    <columns>RTL_Status_Code__c</columns>
    <columns>RTL_Status__c</columns>
    <columns>RTL_Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>